Tree done, bare

--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <!-- <script src="./js/scripts.js" type="module"> </script> -->
-    <script src="./js/waterGen.js" type="module"> </script>
+    <script src="./js/scripts.js" type="module"> </script>
+    <!-- <script src="./js/waterGen.js" type="module"> </script> -->
 
 </body>
 
