--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <!-- <script src="./js/scripts.js" type="module"> </script> -->
-    <script src="./js/waterGen.js" type="module"> </script>
+    <script src="./js/terrain.js" type="module"> </script>
 
 </body>
 
